--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
 /* General Styles */
 :root {
-  --brand-green: #9ff202;
-  --background: #ffffff;
-  --brand-pink: #ff02a9;
-  --brand-yellow: #f2da02;
-  --text-black: #000000;
-  --hr-line: #d9d9d9;
+  --background: #fafafa;
+  --white: #ffffff;
+  --black: #000000;
   transition: 0.4s ease;
   font-size: 16px;
 }
@@ -104,1037 +101,4 @@ body {
   background-color: var(--background);
   color: var(--text-black);
   transition: background-color 0.5s ease;
-}
-
-header {
-  position: fixed;
-  top: 0;
-  z-index: 999;
-  width: 100%;
-  overflow: hidden;
-  background-color: var(--background);
-}
-
-.header-inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 24px 10%;
-}
-
-header a {
-  font-family: "Nigante", sans-serif;
-  font-weight: 400;
-  transition: 0.4s ease;
-}
-
-header a:hover .star {
-  animation-play-state: paused;
-}
-
-header a:hover {
-  color: var(--brand-pink);
-}
-
-nav,
-#logo,
-.social-links {
-  width: 30%;
-}
-
-nav {
-  flex-shrink: 0;
-}
-
-#logo {
-  flex-shrink: 1;
-}
-
-nav ul {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-nav li {
-  list-style-type: none;
-}
-
-#logo a,
-#m-logo a {
-  font-family: "Nigante", sans-serif;
-  font-size: 24px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-/* ==== Mobile Header ==== */
-.mobile-header {
-  position: fixed;
-  display: none;
-  top: 0;
-  width: 100%;
-  background-color: var(--background);
-  padding: 24px;
-  z-index: 999;
-}
-.mobile-header-inner {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-#m-logo {
-  width: 50%;
-}
-#m-logo a {
-  justify-content: flex-start;
-  text-align: left;
-}
-
-.burger {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-  gap: 10px;
-}
-.burger div {
-  background-color: var(--text-black);
-  height: 2px;
-}
-.burger .line-1 {
-  width: 35px;
-  transition: 0.4s ease;
-}
-.burger .line-2 {
-  width: 20px;
-  transition: 0.4s ease;
-}
-
-.burger.active {
-  align-items: center;
-  gap: 0;
-  position: relative;
-}
-.burger.active .line-1 {
-  position: absolute;
-  top: 50%;
-  width: 20px;
-  transform: rotate(-45deg) translateY(-50%);
-}
-.burger.active .line-2 {
-  position: absolute;
-  bottom: 50%;
-  width: 20px;
-  transform: rotate(45deg) translateY(50%);
-}
-
-.mobile-navbar {
-  width: auto;
-  height: 300px;
-  min-width: 300px;
-  max-width: 90%;
-  border: 2px solid var(--text-black);
-  border-radius: 16px;
-  padding: 16px;
-  position: fixed;
-  top: 100px;
-  right: 24px;
-  background-color: var(--background);
-  display: none;
-  z-index: 99;
-  transform: translateY(-200%);
-  transition: 0.4s ease;
-}
-.overlay {
-  position: fixed;
-  z-index: 8;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  transform: translateY(-200%);
-  transition: 0.4s ease-in-out;
-  display: none;
-}
-
-.mobile-navbar.active,
-.overlay.active {
-  transform: translateY(0);
-}
-
-.mobile-navbar-inner {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.mobile-navbar li {
-  list-style-type: none;
-  margin-bottom: 24px;
-}
-.mobile-navbar li a {
-  font-size: 32px;
-  font-weight: 500;
-}
-
-.mobile-navbar .social-links {
-  width: 100%;
-  justify-content: center;
-}
-
-@media screen and (max-width: 820px) {
-  body {
-    font-size: 20px;
-  }
-  header {
-    display: none;
-  }
-  .mobile-header,
-  .mobile-navbar,
-  .overlay {
-    display: block;
-  }
-}
-
-.hero {
-  width: 80%;
-  margin-inline: auto;
-  padding-block: 24px;
-  margin-bottom: 40px;
-  background: url("/assets/hero-bg.png");
-  background-repeat: no-repeat;
-  background-size: 80%;
-  background-position: top center;
-}
-
-.name-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.theme-toggle {
-  background-color: var(--brand-green);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  cursor: pointer;
-}
-.theme-toggle:hover {
-  background-color: #000000;
-}
-.theme-toggle img {
-  width: 24px;
-}
-
-.name {
-  color: var(--brand-green);
-  font-size: 64px;
-  font-family: "Nigante", sans-serif;
-  font-weight: 300;
-  margin: 32px 0 8px;
-  line-height: 1;
-}
-
-.tagline {
-  font-size: 32px;
-  font-weight: 500;
-  margin: 0;
-  overflow: visible;
-}
-.tagline span {
-  position: relative;
-  overflow: visible;
-}
-.tagline .tag-after::after {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 24px;
-  right: 0;
-  transform: translateY(calc(100% + 10px));
-  z-index: 2;
-}
-.tag-after.light::after {
-  background: url("/assets/illustrator-1.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.tag-after.dark::after {
-  background: url("/assets/illustrator-2.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.tagline .tag-before::after {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 24px;
-  left: -90%;
-  transform: translateY(calc(100% + 20px));
-  z-index: 2;
-}
-.tag-before.light::after {
-  background: url("/assets/ui.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.tag-before.dark::after {
-  background: url("/assets/ui-2.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-@media screen and (max-width: 820px) {
-  .hero {
-    width: 95%;
-  }
-}
-
-@media screen and (max-width: 520px) {
-  .name {
-    font-size: 32px;
-    text-align: center;
-  }
-  .tagline {
-    font-size: 24px;
-  }
-  .tagline .tag-after::after,
-  .tagline .tag-before::after {
-    width: 80px;
-    transform: translateY(100%);
-  }
-}
-
-.about-section {
-  display: flex;
-  justify-content: space-between;
-}
-
-.about-me,
-.fav-quote {
-  height: 300px;
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 16px;
-  text-align: center;
-}
-
-.about-me {
-  justify-content: flex-start;
-}
-.fav-quote {
-  justify-content: flex-end;
-}
-
-.as-icon {
-  height: 40px;
-  width: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  border: 2px solid var(--text-black);
-}
-
-.as-icon img {
-  display: block;
-  width: 24px;
-}
-
-.user-icon {
-  background-color: var(--brand-pink);
-  border-bottom-right-radius: 0;
-}
-
-.quote-icon {
-  background-color: var(--brand-green);
-  border-bottom-left-radius: 0;
-}
-
-.emma-image-inner {
-  width: 240px;
-  height: 240px;
-  margin-top: 40px;
-  border: 2px solid var(--text-black);
-  border-radius: 50%;
-  background-color: var(--brand-green);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.emma-image img {
-  width: 200px;
-  height: 220px;
-  object-fit: cover;
-}
-
-.emma-image {
-  position: relative;
-}
-
-.emma-image::before {
-  content: "";
-  position: absolute;
-  height: 100px;
-  width: 100px;
-  z-index: 9;
-  left: -20px;
-  bottom: 20px;
-  animation: 3s infinite normal rotateItem;
-}
-.emma-image:hover::before {
-  animation-play-state: paused;
-}
-.emma-image.light::before {
-  background: url("/assets/cup-1.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.emma-image.dark::before {
-  background: url("/assets/cup-2.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-@media screen and (max-width: 820px) {
-  .about-section {
-    margin-top: 24px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-columns: minmax(100px, auto);
-    grid-auto-rows: minmax(100px, auto);
-    gap: 24px;
-  }
-  .about-section > div {
-    width: auto;
-    max-width: 80%;
-    margin: auto;
-  }
-  .emma-image {
-    order: 1;
-    grid-column: 1/3;
-  }
-  .about-me {
-    order: 2;
-    grid-column: 1/2;
-  }
-  .fav-quote {
-    order: 3;
-    grid-column: 2/3;
-  }
-  .about-me,
-  .fav-quote {
-    height: auto;
-  }
-  .about-me {
-    margin-top: 24px;
-  }
-  .emma-image-inner {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 520px) {
-  .about-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.tools {
-  width: 80%;
-  margin: 0 auto 64px;
-}
-.fav-tools-heading {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.fav-tools-heading .sub-heading {
-  padding-left: 24px;
-  width: fit-content;
-  flex-shrink: 0;
-  justify-content: flex-end;
-}
-
-.tools-marquee {
-  width: 100%;
-  overflow: hidden;
-}
-.tools-slider {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-block: 24px;
-  animation: scrollingTools 10s linear infinite;
-}
-
-.tools-slider:hover {
-  animation-play-state: paused;
-}
-
-.tool {
-  width: 25%;
-  font-family: "Nigante", sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  flex-shrink: 0;
-  white-space: nowrap;
-  padding-inline: 8px;
-  text-align: center;
-}
-
-.tool:not(:last-child) {
-  border-right: 1px solid var(--brand-green);
-}
-
-.tool-number {
-  color: var(--brand-green);
-}
-
-@media screen and (max-width: 820px) {
-  .tools {
-    width: 95%;
-  }
-  .tools-slider {
-    animation: 15s scrollingToolsMobile linear infinite;
-  }
-  .tool {
-    width: 60%;
-    font-size: 20px;
-  }
-}
-
-.projects-container {
-  width: 80%;
-  margin: 0 auto 64px;
-}
-
-.projects-container .hr {
-  margin-block: 24px;
-  flex-shrink: 0;
-}
-
-.projects-heading {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 24px;
-}
-.projects-heading .sub-heading {
-  padding-right: 24px;
-  width: fit-content;
-  flex-shrink: 0;
-  justify-content: flex-end;
-}
-
-.project-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 40px;
-}
-.project-info {
-  width: 40%;
-}
-.project-name {
-  font-size: 32px;
-  font-family: "Nigante", sans-serif;
-  letter-spacing: 3px;
-}
-.project-number {
-  color: var(--brand-green);
-  letter-spacing: normal;
-  font-size: 24px;
-}
-.project-type {
-  font-family: "Darker Grotesque", sans-serif;
-  font-size: 18px;
-  margin-left: 24px;
-  letter-spacing: normal;
-}
-
-.project-link {
-  display: flex;
-  align-items: center;
-  width: fit-content;
-  font-weight: 700;
-  position: relative;
-  line-height: 1;
-  margin-top: 16px;
-}
-
-.project-link::after {
-  position: absolute;
-  content: "";
-  background: url("/assets/arrow-right.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 50px;
-  height: 100%;
-  right: -60px;
-  top: 2px;
-  line-height: 1;
-}
-
-.project-image,
-.project-image img {
-  width: 300px;
-  height: 300px;
-}
-
-.project-image {
-  position: relative;
-  z-index: 2;
-}
-
-.project-image::after {
-  width: 100%;
-  height: 100%;
-  content: "";
-  position: absolute;
-  left: 10px;
-  top: 10px;
-  background-color: var(--brand-yellow);
-  z-index: -1;
-}
-
-.project-image.green-bg::before {
-  width: 100px;
-  height: 100px;
-  content: "";
-  position: absolute;
-  left: calc(100% - 50px);
-  top: 50%;
-  z-index: 3;
-  transform: translateY(-50%);
-  animation: 3s infinite normal rotateItem;
-}
-.project-image.green-bg.light::before {
-  background-image: url("/assets/cup-1.svg");
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.project-image.green-bg.dark::before {
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url("/assets/cup-2.svg");
-}
-
-@media screen and (max-width: 820px) {
-  .projects-container {
-    width: 95%;
-  }
-  .project-info {
-    width: 60%;
-  }
-  .project-image,
-  .project-image img {
-    width: 200px;
-    height: 200px;
-  }
-}
-
-@media screen and (max-width: 520px) {
-  .project-container {
-    flex-direction: column;
-  }
-  .project-info {
-    width: 100%;
-    order: 2;
-  }
-  .project-name {
-    font-size: 28px;
-    letter-spacing: 2px;
-  }
-  .project-type {
-    margin-left: 8px;
-    font-weight: 300;
-  }
-  .project-image {
-    order: 1;
-    margin-bottom: 32px;
-  }
-  .project-image.green-bg::before {
-    top: 30%;
-  }
-}
-
-.certificates {
-  width: 80%;
-  overflow-x: hidden;
-  margin: 0 auto 64px;
-}
-.cert-heading {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cert-heading .sub-heading {
-  padding-left: 24px;
-  width: fit-content;
-  flex-shrink: 0;
-  justify-content: flex-end;
-}
-.cert-marquee {
-  width: 100%;
-  overflow: hidden;
-}
-.certs-slider {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-block: 24px;
-  gap: 24px;
-  animation: 15s scrollingCerts linear infinite;
-}
-.certs-slider:hover {
-  animation-play-state: paused;
-}
-.certificate {
-  width: 60%;
-  flex-shrink: 0;
-  white-space: nowrap;
-  font-family: "Nigante", sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  text-align: center;
-  padding-right: 24px;
-}
-
-.certificate:not(:last-child) {
-  border-right: 1px solid var(--brand-green);
-}
-
-.cert-number {
-  color: var(--brand-green);
-}
-
-@media screen and (max-width: 820px) {
-  .certificates {
-    width: 95%;
-  }
-  .certs-slider {
-    animation: 15s scrollingCertsMobile linear infinite;
-  }
-  .certificate {
-    width: 170%;
-    font-size: 20px;
-  }
-}
-
-.contact {
-  width: 80%;
-  margin: 0 auto 64px;
-}
-.contact-heading {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 24px;
-}
-.contact-heading .sub-heading {
-  padding-right: 24px;
-  width: fit-content;
-  flex-shrink: 0;
-  justify-content: flex-end;
-}
-
-.contact-split {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cs-half {
-  width: 47.5%;
-}
-.contact-form {
-  width: 100%;
-}
-.contact-form :is(label, input, textarea) {
-  border: none;
-  outline: none;
-  width: 100%;
-  color: var(--text-black);
-}
-
-.contact-form :is(input, textarea) {
-  padding: 8px 8px;
-  margin-bottom: 16px;
-  border-bottom: 2px solid var(--hr-line);
-  background: none;
-}
-
-.submit-container {
-  width: 100%;
-  position: relative;
-  z-index: 2;
-}
-
-.contact-form input[type="submit"] {
-  width: 100%;
-  background-color: var(--brand-green);
-  color: #000000;
-  border: 2px solid #000000;
-  padding: 12px;
-  font-size: 20px;
-  font-family: "Nigante", sans-serif;
-  font-weight: 400;
-}
-.submit-container::after {
-  position: absolute;
-  display: block;
-  content: "";
-  width: 100%;
-  height: calc(60% + 10px);
-  background-color: var(--brand-yellow);
-  top: 6px;
-  left: 6px;
-  z-index: -1;
-}
-
-.image-container {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.contact-image {
-  width: 400px;
-  margin: auto;
-  height: 300px;
-  background-color: var(--brand-pink);
-  border: 2px solid var(--text-black);
-  border-radius: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  overflow: visible;
-}
-
-.contact-image img {
-  width: 200px;
-  transform: rotate(-20deg);
-}
-
-.contact-image::before {
-  position: absolute;
-  content: "";
-  width: 100px;
-  height: 50px;
-  background: url("/assets/contact-arrow-1.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  top: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.contact-image::after {
-  position: absolute;
-  content: "";
-  width: 100px;
-  height: 100px;
-  top: 80%;
-  left: -20px;
-  z-index: 9;
-}
-
-.contact-image.light::after {
-  background: url("/assets/contact-squeeze-1.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.contact-image.dark::after {
-  background: url("/assets/contact-squeeze-2.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-footer {
-  width: 80%;
-  margin: 0 auto;
-  border-top: 2px solid var(--hr-line);
-  padding: 32px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.copyright {
-  text-align: center;
-  width: 50%;
-}
-
-.copyright a {
-  color: var(--brand-green);
-}
-
-footer :is(.footer-logo, .social-links) {
-  width: 25%;
-}
-
-.footer-logo a {
-  font-family: "Nigante", sans-serif;
-  font-size: 24px;
-  text-align: center;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 10px;
-}
-
-@media screen and (max-width: 820px) {
-  .contact,
-  footer {
-    width: 95%;
-  }
-
-  section,
-  footer {
-    overflow-x: hidden;
-  }
-
-  .copyright,
-  footer :is(.footer-logo, .social-links) {
-    width: 100%;
-  }
-}
-
-.footer-logo a {
-  justify-content: center;
-}
-
-@media screen and (max-width: 520px) {
-  section,
-  footer {
-    width: 100%;
-    padding-inline: 24px;
-  }
-  .contact-split {
-    flex-direction: column;
-    align-items: center;
-  }
-  .cs-half {
-    width: 100%;
-  }
-  .contact-form-container {
-    order: 2;
-  }
-  .image-container {
-    order: 1;
-    margin-bottom: 40px;
-  }
-  .contact-image {
-    width: 300px;
-    height: 220px;
-  }
-  .contact-image img {
-    width: 150px;
-    transform: rotate(-12deg);
-    margin-top: 20px;
-  }
-  .contact-image::after {
-    width: 50px;
-    height: 70px;
-    left: -30px;
-  }
-
-  footer {
-    flex-direction: column;
-    gap: 16px;
-  }
-  footer > div {
-    width: 100%;
-    text-align: center;
-  }
-  .social-links {
-    width: 100%;
-    justify-content: center;
-  }
-}
-
-/* ==== Rotating Effect ==== */
-@keyframes rotateItem {
-  from {
-    transform: rotate(0);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes scrollingTools {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-@keyframes scrollingToolsMobile {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-480%);
-  }
-}
-
-@keyframes scrollingCerts {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-90%);
-  }
-}
-
-@keyframes scrollingCertsMobile {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-510%);
-  }
 }
