--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   --background: #fafafa;
   --white: #ffffff;
   --black: #000000;
+  --text-color: #4d4d4d;
   transition: 0.4s ease;
   font-size: 16px;
 }
@@ -15,6 +16,14 @@
 
 html {
   overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+.d-none {
+  display: none;
+}
+.d-block {
+  display: block;
 }
 
 .subheading {
@@ -36,6 +45,15 @@ a {
   color: var(--text-black);
 }
 
+.btn {
+  background-color: var(--black);
+  color: var(--white);
+  padding: 16px 32px;
+  font-family: "Varguina", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+}
+
 .star {
   width: 24px;
   height: 24px;
@@ -50,33 +68,118 @@ a {
   height: 24px;
 }
 
-.social-links {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 16px;
+.fix-padding {
+  padding-top: 100px;
 }
 
-.social-links a {
+.top-line {
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  background-color: var(--black);
+  top: 100px;
+  z-index: 9;
+}
+
+.bottom-line {
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  background-color: var(--black);
+  bottom: 100px;
+  z-index: 99;
+}
+
+.sidebar {
+  position: fixed;
+  top: 110px;
+  right: 4%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.theme-toggle {
+  height: 32px;
+  width: 32px;
+  background-color: var(--black);
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--brand-green);
   border-radius: 50%;
-  height: 30px;
-  width: 30px;
+  margin-bottom: 24px;
+}
+.theme-toggle img {
+  width: 24px;
 }
 
-.social-links a:hover {
-  background-color: var(--brand-pink);
+.page-progress-path {
+  width: 10px;
+  height: 200px;
+  border: 1px solid var(--black);
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 32px;
+}
+.pp-bar {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 20%;
+  background-color: var(--black);
 }
 
-.social-links a img {
-  width: 20px;
+.sidebar-social-links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.fix-padding {
-  padding-top: 100px;
+.s-link {
+  height: 35px;
+  width: 35px;
+  border: 1px solid var(--black);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.s-link-inner {
+  background-color: var(--black);
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.s-link-inner::before {
+  position: absolute;
+  content: "";
+  width: 2.5px;
+  height: 2.5px;
+  background-color: var(--black);
+  border-radius: 50%;
+  top: 50%;
+  left: -3px;
+  transform: translateY(-50%);
+}
+.s-link-inner::after {
+  position: absolute;
+  content: "";
+  width: 2.5px;
+  height: 2.5px;
+  background-color: var(--black);
+  border-radius: 50%;
+  top: 50%;
+  right: -3px;
+  transform: translateY(-50%);
+}
+.s-link-inner img {
+  width: 14px;
 }
 
 @media screen and (max-width: 820px) {
@@ -95,6 +198,470 @@ body {
   color: var(--text-black);
   transition: 0.5s ease;
   transition-property: background-color, color;
+  position: relative;
+}
+
+p {
+  color: var(--text-color);
+}
+
+.main-container {
+  width: 80%;
+  margin-inline: auto;
+  border-inline: 1px solid var(--black);
+  overflow: hidden;
+}
+
+/* ==== header ===== */
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100px;
+  background-color: var(--background);
+  z-index: 999;
+  border-bottom: 1px solid var(--black);
+}
+
+.header-inner {
+  width: 80%;
+  height: 100%;
+  margin-inline: auto;
+  border-inline: 1px solid var(--black);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 16px;
+}
+
+#logo {
+  width: auto;
+}
+#logo img {
+  animation: rotateItem 5s infinite;
+  width: 70px;
+}
+#logo:hover img {
+  animation-play-state: paused;
+}
+
+nav {
+  width: 50%;
+}
+
+nav ul {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+}
+
+nav ul li {
+  list-style-type: none;
+}
+
+nav a {
+  font-size: 16px;
+  font-family: "Varguina", sans-serif;
+  font-weight: 400;
+}
+
+/* ==== hero ===== */
+.hero {
+  display: flex;
+  justify-content: space-between;
+  height: 500px;
+  position: relative;
+}
+
+.hero-first-half {
+  width: 50%;
+  height: 100%;
+  border-right: 1px solid var(--black);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 24px;
+  padding: 16px;
+}
+
+.hero-name {
+  font-family: "Varguina", sans-serif;
+  font-size: 64px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.hero-text {
+  line-height: 1.4;
+}
+
+.hero-btn {
+  width: 200px;
+  position: relative;
+}
+.hero-btn a {
+  text-align: center;
+  display: block;
+  width: 100%;
+}
+.hero-btn::before {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  border: 1px solid var(--black);
+  left: -5px;
+  top: 5px;
+  z-index: -1;
+}
+
+.hero-second-half {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding: 16px;
+}
+.hero-second-half img {
+  width: 350px;
+}
+
+.hero-rotator {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 50px;
+  width: 100px;
+}
+
+.hero-rotator img {
+  width: 100px;
+  animation: rotateItem 10s infinite;
+}
+.hero-rotator:hover img {
+  animation-play-state: paused;
+}
+
+.hero-bg {
+  position: absolute;
+  width: 90%;
+  margin-inline: auto;
+  height: 70%;
+  bottom: 100px;
+  background: url("/assets/fe-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 80%;
+}
+
+/* ==== skills ==== */
+.skills {
+  width: 100%;
+  border-block: 1px solid var(--black);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+}
+.skill-title {
+  width: 20%;
+  background-color: var(--white);
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 16px;
+}
+.skill-list {
+  width: 80%;
+  height: 100%;
+  overflow: hidden;
+}
+.skill-slider {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  animation: scrollingSkills 13s linear infinite;
+  height: 100%;
+}
+.skill-list:hover .skill-slider {
+  animation-play-state: paused;
+}
+.skill {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  font-family: "Ubuntu";
+  font-weight: 300;
+  text-transform: uppercase;
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+.skill-line {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+}
+
+.skill-line img {
+  width: 50px;
+}
+
+/* ==== projects ==== */
+#projects {
+  width: 100%;
+  padding-inline: 16px;
+}
+
+#projects .subheading {
+  margin-block: 32px;
+  text-align: center;
+  justify-content: center;
+}
+
+.projects-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.project-cursor {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.project-cursor img {
+  width: 20px;
+}
+
+.project-timeline {
+  width: 60px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.project-number {
+  width: 28px;
+  height: 28px;
+  padding: 18px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--black);
+  border-radius: 50%;
+  font-size: 24px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+}
+
+.timeline-path {
+  width: 8px;
+  height: 150px;
+  border: 1px solid var(--black);
+  position: relative;
+}
+.timeline-fill {
+  width: 100%;
+  height: 20%;
+  position: absolute;
+  top: 0;
+  background-color: var(--black);
+}
+
+.project-cards-container {
+  padding-inline: 16px;
+  width: 100%;
+  flex-shrink: 1;
+}
+
+.project-cards-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  width: 100%;
+}
+
+.project-card {
+  background-color: var(--white);
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 32px;
+}
+
+.project-img {
+  width: 150px;
+  flex-shrink: 0;
+  height: 150px;
+  overflow: hidden;
+}
+
+.project-img img {
+  width: 150px;
+}
+
+.project-details {
+  width: 90%;
+  flex-shrink: 1;
+}
+
+.project-name {
+  font-weight: 500;
+  font-family: "Ubuntu", sans-serif;
+  margin-bottom: 16px;
+  font-size: 24px;
+}
+
+.project-desc {
+  line-height: 1.4;
+  margin-bottom: 16px;
+}
+
+.project-tools {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 16px;
+}
+
+.project-tools span {
+  background-color: var(--black);
+  color: var(--white);
+  border-radius: 32px;
+  padding: 8px;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.load-project {
+  display: block;
+  width: auto;
+  margin: 20px auto;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+#contact {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 500px;
+  border-top: 1px solid var(--black);
+}
+
+#contact > div {
+  height: 100%;
+}
+
+.contact-first-half {
+  width: 50%;
+  border-right: 1px solid var(--black);
+  padding: 16px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.contact-first-half p {
+  padding-block: 8px;
+}
+
+.contact-form {
+  margin-top: 24px;
+}
+.form-group {
+  width: 100%;
+  position: relative;
+}
+
+.contact-form,
+.contact-form :is(form, input, label, textarea) {
+  width: 100%;
+}
+.contact-form input,
+.contact-form textarea {
+  padding: 8px;
+  border: 1px solid var(--black);
+  margin-bottom: 16px;
+  position: relative;
+  font-family: inherit;
+  font-size: inherit;
+  background-color: var(--white);
+}
+
+.form-group-input {
+  position: relative;
+  color: var(--black);
+}
+
+.form-group label,
+.form-group-input:placeholder-shown.form-group-input:not(:focus) ~ label {
+  position: absolute;
+  left: 16px;
+  top: 8px;
+  color: var(--text-color);
+  transition: 0.1s ease-in;
+  transition-property: top, left;
+  width: auto;
+  cursor: text;
+}
+
+.form-group-input:focus ~ label,
+.form-group-input:not(:placeholder-shown).form-group-input:not(:focus) ~ label {
+  top: -0.4rem;
+  left: 8px;
+  font-size: 0.8rem;
+  color: var(--black);
+  font-weight: 700;
+  background-color: var(--white);
+}
+
+.contact-form input[type="submit"] {
+  background-color: var(--black);
+  color: var(--white);
+  font-family: "Varguina", sans-serif;
+}
+
+.contact-second-half {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact-second-half img {
+  width: 200px;
+  animation: rotateItem 10s infinite;
+}
+.contact-second-half img:hover {
+  animation-play-state: paused;
+}
+
+footer {
+  height: 100px;
+  border-top: 1px solid var(--black);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* ==== Rotating Effect ==== */
@@ -108,38 +675,20 @@ body {
   }
 }
 
-@keyframes scrollingTools {
+@keyframes scrollingSkills {
   0% {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-270%);
   }
 }
 
-@keyframes scrollingToolsMobile {
+@keyframes scrollingSkillsMobile {
   0% {
     transform: translateX(0);
   }
   100% {
     transform: translateX(-480%);
-  }
-}
-
-@keyframes scrollingCerts {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-90%);
-  }
-}
-
-@keyframes scrollingCertsMobile {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-510%);
   }
 }
