--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,20 @@ a {
   width: 24px;
 }
 
+.theme-toggle-mobile {
+  height: 40px;
+  width: 40px;
+  background-color: var(--black);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.theme-toggle-mobile img {
+  width: 24px;
+}
+
 .page-progress-path {
   width: 10px;
   height: 200px;
@@ -323,32 +337,25 @@ nav a {
 .burger.active .line-1 {
   position: absolute;
   top: 50%;
-  width: 20px;
+  width: 35px;
   transform: rotate(-45deg) translateY(-50%);
 }
 .burger.active .line-2 {
   position: absolute;
   bottom: 50%;
-  width: 20px;
+  width: 35px;
   transform: rotate(45deg) translateY(50%);
 }
 
 .mobile-navbar {
-  width: auto;
-  height: 300px;
-  min-width: 300px;
-  max-width: 90%;
-  border: 2px solid var(--text-black);
-  border-radius: 16px;
-  padding: 16px;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 100px;
-  right: 24px;
   background-color: var(--background);
-  display: none;
   z-index: 99;
   transform: translateY(-200%);
-  transition: 0.4s ease;
+  transition: transform 0.4s ease;
 }
 .overlay {
   position: fixed;
@@ -374,7 +381,8 @@ nav a {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 }
 
 .mobile-navbar li {
@@ -382,13 +390,41 @@ nav a {
   margin-bottom: 24px;
 }
 .mobile-navbar li a {
-  font-size: 32px;
-  font-weight: 500;
+  font-size: 56px;
+  font-weight: 300;
 }
 
-.mobile-navbar .social-links {
+.mobile-social-links {
+  display: flex;
   width: 100%;
   justify-content: center;
+  gap: 32px;
+  margin-top: 32px;
+}
+
+.mobile-social-links .s-link {
+  height: 64px;
+  width: 64px;
+}
+
+.mobile-social-links .s-link-inner {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-social-links .s-link-inner img {
+  width: 20px;
+}
+
+.mobile-social-links .s-link-inner::before {
+  width: 5px;
+  height: 5px;
+  left: -8px;
+}
+.mobile-social-links .s-link-inner::after {
+  width: 5px;
+  height: 5px;
+  right: -8px;
 }
 
 @media screen and (max-width: 820px) {
