Fixed hero background image aspect ratio.

--- a/css/style.css
+++ b/css/style.css
@@ -558,6 +558,7 @@ nav a {
   height: 80%;
   bottom: 100px;
   background-image: url("/assets/fe-bg.webp");
+  aspect-ratio: 16/9;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
