Disabled resize on form input fields.

--- a/css/style.css
+++ b/css/style.css
@@ -991,6 +991,7 @@ nav a {
   font-family: inherit;
   font-size: inherit;
   background-color: var(--white);
+  resize: none;
 }
 
 .form-group-input {
