--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,6 @@ a {
   font-weight: 400;
   font-size: 16px;
 }
-
 .star {
   width: 24px;
   height: 24px;
@@ -516,7 +515,13 @@ nav a {
   border: 1px solid var(--black);
   left: -5px;
   top: 5px;
+  transition: top 0.1s ease, left 0.2s ease-in-out;
   z-index: -1;
+}
+.hero-btn:hover::before {
+  left: 0;
+  top: 0;
+  border: none;
 }
 
 .hero-second-half {
